# asterixdb-python-driver

./: .gitignore  LICENSE  README.md  analytics_with_pyasterix.py  pyproject.toml  querying_yelp.py  setup.cfg  test_asterix_client.py  test_asterix_complexFind.py  test_async_queries.py  test_basic_queries.py  test_find.py  test_insert_method.py  test_new_dataframe.py  test_pandasdf_asterixdf.py  test_pep_async_queries.py  test_pep_basic_queries.py  testing_dataframe.py
Docs/: DATAFRAME_GUIDE.md  DBAPI_GUIDE.md  DRIVER_OVERVIEW.md  EXCEPTION_HANDLING.md  OBSERVABILITY_FOR_DEVELOPERS.md
Examples/: benchmark.py  connection_pool_example.py  exception_handling_guide.py
Examples/High-Level AsterixDataframe/: querying_yelp.py  simple_observability_demo.py  test_agg.py  test_asterix_dataframe.py  test_new_dataframe.py  test_pandasdf_asterixdf.py  test_query_builder.py  testing_asterixdataframe.ipynb  testing_dataframe.py
Examples/Low-Level PEP249 Module/: test_pep_async_queries.py  test_pep_basic_queries.py  testing_paramQueries.py
Examples/YelpDataExploerer/: app.py  metrics_viewer.py  run_prometheus_server.py
Examples/YelpDataExploerer/modules/: business_explorer.py  crud_operations.py  dashboard.py  embedded_observability.py  observability_panel.py  query_lab.py
Examples/YelpDataExploerer/utils/: analysis.py  db.py  styles.py
requirements/: dev-requirements.txt
src/pyasterix/: __init__.py  _http_client.py  asterix_client.py  connection.py  cursor.py  exceptions.py  observability.py  pool.py
src/pyasterix/dataframe/: __init__.py  (+3 more)
tests/: test_http_client.py
(+13 files in other folders)
